<resources>
    <string name="app_name">Flagsmith</string>
    <string name="flagmsith">Flagmsith</string>
    <string name="name_trait">Name Trait</string>
    <string name="value">Value</string>
    <string name="name">Name</string>
    <string name="status">Status:</string>
    <string name="elipsis">…</string>
    <string name="flags">Flags</string>
    <string name="feature">Feature</string>
    <string name="trait">Trait</string>
    <string name="search_feature">Search Feature</string>
    <string name="enter_feature_id">Enter Feature ID</string>
    <string name="search">Search</string>
    <string name="result">Result</string>
</resources>