<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/search_feature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/ed_search_feature"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="12dp"
            android:hint="@string/enter_feature_id"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="" />

        <Button
            android:id="@+id/bt_searchFeature"
            android:background="@color/purple_500"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_marginTop="48dp"
            android:layout_gravity="center"
            android:text="@string/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/tv_result_searchFeature"
            android:layout_marginTop="48dp"
            android:textSize="15sp"
            android:textColor="@color/teal_700"
            android:text="@string/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_featureResult"
            tools:listitem="@layout/item_flag"
            tools:itemCount="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <ProgressBar
        android:visibility="gone"
        android:id="@+id/prg_pageFeatureSearch"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>