<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:clickable="true"
        android:id="@+id/lay_card_click_itemFlag"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        android:elevation="15dp"
        app:cardBackgroundColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true">

        <LinearLayout
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/name"
                    android:layout_centerVertical="true"
                    android:id="@+id/tv_flagName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:text="@string/value"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/tv_flagValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:text="@string/status"
                    android:layout_marginEnd="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:text="@string/elipsis"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>