<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/im_logo"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/flag_logo_word"
        android:layout_width="150dp"
        android:layout_height="150dp"/>


    <LinearLayout

        android:layout_below="@+id/im_logo"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_flags"
            android:background="@color/purple_500"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/flags"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/bt_feature"
            android:background="@color/purple_500"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/feature"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/bt_trait"
            android:background="@color/purple_500"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/trait"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>